# easybox

./: .gitignore  README  utils-list.org
base/include/: eb_global.h  list.h
dev-utils/: Makefile
dev-utils/cscope-indexer/: cscope-indexer.c
dev-utils/ddd/: README.md  TODO
dev-utils/ddd/client/cli/: ddd_cli.py
dev-utils/ddd/client/common/: ddd_command.py  ddd_file.py  ddd_log.py  ddd_monitor.py  ddd_portmap.py  ddd_tftp.py  utils.py
dev-utils/ddd/client/web/: bottle.py  ddw.py
dev-utils/ddd/client/web/css/: command.css
dev-utils/ddd/server/: CMakeLists.txt  Makefile  ddd.c  ddd_socket.c  ddd_socket.h
dev-utils/ddd/server/common/: ddd_socket.c  ddd_socket.h
dev-utils/ddd/server/component/: command.c  component.conf  component.h  component_funcs.conf  file.c  log.c  monitor.c  portmap.c  tftp.c
dev-utils/ddd/server/component/monitor/: cpu.c  cpu.h  memory.c  memory.h  proc.h
dev-utils/ddd/server/core/: ddd.c
dev-utils/hex/: hex2ascii.py
dev-utils/logdog/: Makefile  TODO  doglog.h  file_watcher.c  file_watcher.h  logdog_action.c  logdog_action.h  logdog_config.c  logdog_config.h  logdog_config.json  main.c
dev-utils/logdog/test/: test.c
dev-utils/netfifo/: Makefile  README.md  netfifo.h  netfifo_client.c  netfifo_server.c
dev-utils/ring/: Makefile  ring.c  test.sh
dev-utils/z/: README.md  install.sh  path.db  uninstall.sh  z.sh  z_complete.sh
doc-utils/: org2md.py
life/: bing_wallpaper.py  send2k.py
work/git-word-diff/: README.md  git-word-diff.py
work/tomato-lock/: Makefile  README  config.def.h  config.mk  tomato-lock.c
(+8 files in other folders)
